<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pago_final">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp">

                <Button
                    android:id="@+id/flechadevolverse"
                    android:layout_width="23.3dp"
                    android:layout_height="22.2dp"
                    android:background="@drawable/flechadevolverse" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/Checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="#ffffff"
                android:text="@string/Checkout"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/Tacontento"
                android:textColor="#848282"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/location"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/location" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/entrega_en_la_puerta" />

            <TextView
                android:id="@+id/opcionesEntrega"
                android:layout_width="285dp"
                android:layout_height="39dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/opciones_de_Entrega"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/send_pri" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/send_regular" />

            <ImageView
                android:id="@+id/retangulosombra2"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:srcCompat="@drawable/agendar"/>

            <TextView
                android:id="@+id/resumenorder"
                android:layout_width="285dp"
                android:layout_height="39dp"
                android:text="@string/Resumen_de_la_Orden"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/resum_item" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/hazlo_regalo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="372dp"
                android:layout_height="88dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/tipo_de_pago" />

            <ImageView
                android:layout_width="372dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/siguiente"  />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>