<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Phone_input_Screen">

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info2"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/bandera"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:src="@drawable/pais_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <View
        android:id="@+id/BFN"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <ImageView
        android:id="@+id/numero_pais"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="13dp"
        android:src="@drawable/numero_pais"
        app:layout_constraintBottom_toBottomOf="@+id/BFN"
        app:layout_constraintEnd_toEndOf="@+id/BFN"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="@+id/BFN"
        app:layout_constraintTop_toTopOf="@+id/BFN"
        app:layout_constraintVertical_bias="0.466" />

    <EditText
        android:id="@+id/numero_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Mobile"
        android:inputType="phone"
        android:onClick="Delivery_list"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/BFN"
        app:layout_constraintEnd_toEndOf="@+id/BFN"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/numero_pais"
        app:layout_constraintTop_toTopOf="@+id/BFN"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Next"
        android:layout_width="381dp"
        android:layout_height="102dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/info3"
        android:layout_width="381dp"
        android:layout_height="65dp"
        android:text="@string/info3"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <ImageView
        android:id="@+id/or"
        android:layout_width="381dp"
        android:layout_height="102dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:srcCompat="@drawable/or" />

    <ImageView
        android:id="@+id/inicio_google"
        android:layout_width="381dp"
        android:layout_height="102dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        app:srcCompat="@drawable/sesion_google" />


</androidx.constraintlayout.widget.ConstraintLayout>